--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="my-work">
             <h2>Мої роботи</h2>
             <hr>
-            <a href="4%20курс/Lr1/index.html" class="btn">Лабораторна робота №1</a>
+            <a href="4%20курс/lr1/index.html" class="btn">Лабораторна робота №1</a>
             <a href="4%20курс/Lr2/index.html" class="btn">Лабораторна робота №2</a>
             <a href="4%20курс/Pr1/index.html" class="btn">Практична робота №1</a>
             <a href="4%20курс/Pr2/index.html" class="btn">Практична робота №2</a>
