--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2>Мої роботи</h2>
             <hr>
             <a href="4%20курс/lr1/index.html" class="btn">Лабораторна робота №1</a>
-            <a href="4%20курс/Lr2/index.html" class="btn">Лабораторна робота №2</a>
+            <a href="4%20курс/lr2/index.html" class="btn">Лабораторна робота №2</a>
             <a href="4%20курс/Pr1/index.html" class="btn">Практична робота №1</a>
             <a href="4%20курс/Pr2/index.html" class="btn">Практична робота №2</a>
             <a href="4%20курс/Pr4/index.html" class="btn">Практична робота №4</a>
