--- a/4 курс/Pr2/Завдання1/index.html
+++ b/4 курс/Pr2/Завдання1/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Товари</title>
+</head>
+<body>
+  <h1>Список товарів</h1>
 
+  <h2>Доступні товари</h2>
+  <div id="available-products"></div>
+
+  <h2>Пошук товару</h2>
+  <input type="text" id="product-name" placeholder="Введіть назву товару">
+  <button id="search-button">Знайти</button>
+  <p id="search-result"></p>
+
+  <script src="app.js"></script>
+</body>
+</html>
