--- a/4 курс/Pr2/Завдання2/index.html
+++ b/4 курс/Pr2/Завдання2/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Групування та сортування студентів</title>
+</head>
+<body>
+  <h1>Групування та сортування студентів</h1>
 
+  <h2>Студенти за групами</h2>
+  <button id="group-button">Показати групи</button>
+  <div id="grouped-students"></div>
+
+  <h2>Сортування студентів за оцінками</h2>
+  <button id="sort-button">Сортувати за оцінками</button>
+  <div id="sorted-students"></div>
+
+  <script src="app.js"></script>
+</body>
+</html>
